--- a/DSP_LAB3.ipynb
+++ b/DSP_LAB3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMw0rWo8tlH5P+kOAgyIMfc",
+      "authorship_tag": "ABX9TyPT6WJor9ehNT/gLcl8ywmU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1094,25 +1094,89 @@
         "# 3. Контрольные вопросы\n",
         "1. Что такое модуляция? Что такое амплитудная модуляция, угловая модуляция,\n",
         "чатотная модуляция?\n",
+        ">Модуляция - это процесс изменения параметров несущего сигнала (частоты, амплитуды, фазы) в зависимости от аналогового или цифрового модулирующего сигнала. Амплитудная модуляция изменяет амплитуду несущего сигнала, угловая модуляция изменяет фазу или частоту несущего сигнала, а частотная модуляция изменяет частоту несущего сигнала.\n",
+        "\n",
         "2. Что такое несущая частота?\n",
+        ">Несущая частота - это частота несущего сигнала, на которую модулируется информационный сигнал.\n",
+        "\n",
         "3. Какие сигналы называют линейно частотно модулированными? В чем их\n",
         "преимущество относительно простых гармонических сигналов?\n",
+        ">Сигналы с линейной частотной модуляцией (ЛЧМ) сигналы - это класс сигналов с\n",
+        "частотной модуляцией, при которой частота несущего сигнала изменяется по\n",
+        "линейному закону.\n",
+        ">Основное применение ЛЧМ-сигналов - задачи радиолокации. Широкополосные\n",
+        "ЛЧМ сигналы позволяют обеспечить высокую разрешающую способность по\n",
+        "дальности без уменьшения длительности посылаемых (зондируемых) импульсов.\n",
+        "Основное понятие ЛЧМ сигнала - это база сигнала, которая характеризуется\n",
+        "произведением ширины спектра и длительности импульса сигнала.\n",
+        "\n",
         "4. Что такое база, девиация, полоса ЛЧМ-сигнала?\n",
+        ">База - это ширина полосы частот, в пределах которой располагается значимая часть спектра ЛЧМ-сигнала.\n",
+        "\n",
+        ">Девиация - это максимальное отклонение частоты несущего сигнала от его средней частоты.\n",
+        "\n",
+        ">Полоса ЛЧМ-сигнала - это разность между максимальной и минимальной частотами в спектре ЛЧМ-сигнала.\n",
+        "\n",
         "5. Каким образом формируется импульсная характеристика для действительных и\n",
         "комплексных ЛЧМ-сигналов?\n",
+        ">для действительных ЛЧМ-сигналов должна\n",
+        "быть единичной амплитуды, с нулевой начальной фазой, зеркально отображенной\n",
+        "относительно обрабатываемого ЛЧМ-сигнала. ИХ для комплексных ЛЧМ-сигналов\n",
+        "строится по таким же принципам, включая еще одно условие для мнимой части:\n",
+        "мнимая часть берется с обратным знаком (комплексно сопряженная ЛЧМ-сигналу).\n",
+        "\n",
         "6. Как получить сжатый ЛЧМ-сигнал? Назовите несколько способов.\n",
+        ">Сжатый ЛЧМ сигнал (или сжатый ЛЧМ импульс) представляет собой кривую,\n",
+        "модулированную функцией, имеющую ярко выраженный пик,\n",
+        "амплитуда которого прямо пропорциональна мощности обрабатываемого сигнала.\n",
+        "\n",
+        ">Классическим методом получения сжатого ЛЧМ сигнала является применение\n",
+        "круговой свертки входного сигнала с его импульсной характеристикой. Эта\n",
+        "операция выполняется во временной области.\n",
+        "\n",
         "7. Что такое свертка, линейная свертка, быстрая свертка?\n",
+        "***Свертка*** описывает взаимодействие сигналов между собой. Если один из сигналов - импульсная характеристика фильтра, то свертка входной последовательности с импульсной характеристикой есть ни что иное, как реакция цепи на входное воздействие. Иными словами, результирующий сигнал отражает прохождение сигнала через фильтр.  \n",
+        "***Линейная свертка*** двух сигналов $a(n)$ , где $n = 0, ..., N-1$ и $b(n)$,  где $n = 0, ..., M-1$ описывается формулой:  \n",
+        "$$ s(n) = a*b = \\sum_{m=0}^{n}a(m)\\cdot b(n-m) \\tag{8}$$  \n",
+        "Вычисление свертки - итеративный процесс, в котором сигналы сдвигают друг относительно друга, затем перемножают и складывают. Предполагается, что сигналы равны нулю вне заданных своих диапазонов, то есть $a(n) = 0$ при $N < n < 0$ и $b(n) = 0$ при $M < n < 0$.  \n",
+        "\n",
+        "***Циклическая (круговая) свертка*** отличается от линейной тем, что входные сигналы имеют одинаковую длительность $N$. Циклическая свертка двух сигналов $a(n)$ и $b(n)$, где $n = 0, ..., N-1$ , описывается формулой:\n",
+        "$$ s(n) = a*b = \\sum_{m=0}^{N-1}a(m)\\cdot b(n-m) \\tag{9}$$\n",
+        "где $n = 0, ..., N-1$ , а число $N$ - длина сигнала $a(n)$ . Как видно, результат циклической свёртки имеет длину N.  \n",
+        "Из предыдущей работы, посвященной преобразованию Фурье, известно свойство: *ДПФ круговой (циклической) свертки двух периодических временных последовательностей равен произведению ДПФ этих сигналов*. Используя это правило, можно вычислить циклическую свертку в 3 этапа:  \n",
+        " - перевести сигналы в частотную область, сделав их ДПФ;\n",
+        " - перемножить полученные ДПФ сигналов;\n",
+        " - перевести результат во временную область, сделав их ОДПФ.\n",
+        "\n",
+        "Такой алгоритм называют ***быстрой сверткой***. При определенных условиях быстрая свертка может быть эффективнее классической. Ниже представлена таблица сравнения эффективности быстрой свертки и свертки, вычисляемой по прямой формуле. В таблице сравнивается число действительных умножений, требуемых для вычисления свертки. Как видно, для длин БПФ до 64, быстрая свёртка проигрывает у прямого метода. Однако, при увеличении длины БПФ результаты меняются в обратную сторону - быстрая свертка начинает выигрывать у прямого метода. Причем, чем больше длина БПФ, тем лучше выигрыш.\n",
+        "\n",
         "8. Как по амплитудному спектру определить полосу ЛЧМ сигнала?\n",
+        ">По амплитудному спектру можно определить полосу ЛЧМ-сигнала как ширину спектра, содержащего основную информацию о сигнале.\n",
+        "\n",
         "9. Как по амплитудному спектру определить центральную (несущую) частоту\n",
         "ЛЧМ-сигнала?\n",
+        ">Центральную (несущую) частоту ЛЧМ-сигнала можно определить по амплитудному спектру как частоту, вокруг которой располагается основная энергия спектра.\n",
+        "\n",
         "10. Какой характер имеет фазовый спектр ЛЧМ-сигнала?\n",
+        ">Фазовый спектр ЛЧМ-сигнала имеет линейный характер, изменяясь линейно относительно частоты.\n",
+        "\n",
         "11. Как определить начальную фазу отраженного ЛЧМ-сигнала?\n",
+        ">Начальную фазу отраженного ЛЧМ-сигнала можно определить с помощью методов обработки сигналов, таких как кросс-корреляция или автокорреляция.\n",
+        "\n",
         "12. Как по форме сжатого ЛЧМ-сигнала определить девиацию?\n",
+        ">Девиацию ЛЧМ-сигнала можно определить по форме сжатого сигнала как максимальное отклонение частоты от несущей частоты.\n",
+        "\n",
         "13. Как определить время задержки отраженного ЛЧМ-сигнала относительно\n",
         "зондирующего (излучаемого)?\n",
+        ">Время задержки отраженного ЛЧМ-сигнала относительно зондирующего может быть определено с помощью анализа временной характеристики сигнала.\n",
+        "\n",
         "14. Что такое снятие сигнала с несущей частоты? На каких принципах основан этот\n",
         "процесс, из каких эпапов состоит?\n",
-        "15. Что такое квадратурная демодуляция?"
+        ">Снятие сигнала с несущей частоты основано на принципе демодуляции сигнала путем умножения на синусоиду и косинусоиду с частотой несущей частоты.\n",
+        "\n",
+        "\n",
+        "15. Что такое квадратурная демодуляция?\n",
+        ">Квадратурная демодуляция - это процесс извлечения информации из сигнала, который был модулирован квадратурно. Она используется для демодуляции угловой модуляции."
       ],
       "metadata": {
         "id": "50xNMw_KOjuF"
