new final prints

--- a/DSP_kr5.ipynb
+++ b/DSP_kr5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhhAsL4JUNl4+SgJljlX9E",
+      "authorship_tag": "ABX9TyMDp5BBDswvZ6mQPORSMYl/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,14 +47,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 272,
+      "execution_count": 295,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
+          "height": 425
         },
         "id": "l2LRN7Ks4i5N",
-        "outputId": "6a5af6bc-d750-44ef-f0f2-158d2c861d04"
+        "outputId": "8d0f5cf0-7f4e-4ca2-d89e-b15fe54878f1"
       },
       "outputs": [
         {
@@ -231,12 +231,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 565
+          "height": 371
         },
         "id": "Z_7xDyaSu3Gj",
-        "outputId": "685f4c81-f1d4-47f8-d2e9-dc894070d214"
+        "outputId": "17c61d44-9e5d-479c-e6e9-32109ee6ca7f"
       },
-      "execution_count": 273,
+      "execution_count": 296,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DaRG1UGG7VSJ",
-        "outputId": "d39e4171-43cc-4001-cc9c-168e0da36327"
+        "outputId": "64098234-3a5b-4eb9-ff69-a6101577d900"
       },
-      "execution_count": 274,
+      "execution_count": 297,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,9 +369,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UsOJQJgVnno4",
-        "outputId": "504ed4c9-bd8e-49c2-825a-65ac3efe51d9"
+        "outputId": "e1c89954-6962-4536-9376-d3ae722534d0"
       },
-      "execution_count": 275,
+      "execution_count": 298,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,16 +406,7 @@
       "metadata": {
         "id": "ORkgLAwpq8kI"
       },
-      "execution_count": 276,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "D4YVQeiFrY1S"
-      },
-      "execution_count": 276,
+      "execution_count": 299,
       "outputs": []
     },
     {
@@ -452,9 +443,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wd1o7ZfXrb3b",
-        "outputId": "6c1dada0-08fc-4ab0-abe2-2ad2c7040d26"
+        "outputId": "783d2ea1-c915-4c98-bd17-3e52d269f180"
       },
-      "execution_count": 277,
+      "execution_count": 300,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,9 +498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "euA5xZbKrc4c",
-        "outputId": "f4757df6-9838-4556-d59d-3235e5c5cca5"
+        "outputId": "462db828-f9c5-4899-f664-fdd8d62aa3e3"
       },
-      "execution_count": 278,
+      "execution_count": 301,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,9 +567,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SlXUxPjcreCs",
-        "outputId": "83eca7a3-68ed-4767-ec84-e7d8eea2204d"
+        "outputId": "fff0318e-a6b2-46e1-96c7-0ec75f1f0827"
       },
-      "execution_count": 279,
+      "execution_count": 302,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,9 +623,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sWByw-P5rfI2",
-        "outputId": "e5536ad6-a237-49ed-ebc5-308377ce485a"
+        "outputId": "a3d92500-fda7-47b2-e4e3-35ce7c8087af"
       },
-      "execution_count": 280,
+      "execution_count": 303,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,9 +676,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rDh3BCpKrf85",
-        "outputId": "4ee09c42-d2e8-4e4c-cc87-5fdca469d63e"
+        "outputId": "022ecbc3-f2be-4f3e-98a7-199ff309be68"
       },
-      "execution_count": 281,
+      "execution_count": 304,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,7 +703,7 @@
       "metadata": {
         "id": "1NS8-qJmsc6R"
       },
-      "execution_count": 281,
+      "execution_count": 304,
       "outputs": []
     },
     {
@@ -724,7 +715,7 @@
       "metadata": {
         "id": "5_z6ArH3seLd"
       },
-      "execution_count": 282,
+      "execution_count": 305,
       "outputs": []
     },
     {
@@ -746,7 +737,7 @@
       "metadata": {
         "id": "IfItVAl0se5P"
       },
-      "execution_count": 283,
+      "execution_count": 306,
       "outputs": []
     },
     {
@@ -779,9 +770,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X65lktFMsfyn",
-        "outputId": "030f3386-ea65-4932-98a3-e3ec98ba6fa8"
+        "outputId": "3a1151f6-8420-458c-c1b5-c6c01df21e6d"
       },
-      "execution_count": 284,
+      "execution_count": 307,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,9 +826,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nH9Uo5lEsgfb",
-        "outputId": "44d1aee4-a1d0-4169-8a63-1032ca4b8a8e"
+        "outputId": "18e9660f-4a2d-486e-f497-6f793dce55d6"
       },
-      "execution_count": 285,
+      "execution_count": 308,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,9 +895,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4OvWeY7DshdZ",
-        "outputId": "0320b130-2615-49da-b1ac-ffa865816ac9"
+        "outputId": "a29d5f15-9853-4591-9657-7fb3ef943511"
       },
-      "execution_count": 286,
+      "execution_count": 309,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,9 +948,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ao7bNALhsiVg",
-        "outputId": "12435ef5-93fe-46e2-ba41-7ef268522616"
+        "outputId": "39baf75d-732f-49e8-dbef-07c1b64f2e72"
       },
-      "execution_count": 287,
+      "execution_count": 310,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,9 +1010,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lrj0PaGjsjOT",
-        "outputId": "ecc65566-719d-4300-a2c7-0d0804a1fd42"
+        "outputId": "4740127f-4435-434a-be66-19b41315185f"
       },
-      "execution_count": 288,
+      "execution_count": 311,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,34 +1107,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p9L-44teskRF",
-        "outputId": "18db89cb-f291-48e7-f18f-0cbb0fd54e7e"
+        "outputId": "dc95b958-fa5f-4174-8b16-5042934d0812"
       },
-      "execution_count": 293,
+      "execution_count": 312,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "stage 3\n",
-            "0 :  (1.53-6.52j)\n",
-            "1 :  (1.53-0.87j)\n",
-            "2 :  (-0.94+0.56j)\n",
-            "3 :  (7.06+14.22j)\n",
-            "4 :  (1.08-2.61j)\n",
-            "5 :  (1.08-2.61j)\n",
-            "6 :  (0.54-0.42j)\n",
-            "7 :  (-37.12-6.08j)\n",
+            "0 :  (-4.68+0.77j)\n",
+            "1 :  (0.98+0.77j)\n",
+            "2 :  (0.15-1.23j)\n",
+            "3 :  (-3.85+2.77j)\n",
+            "4 :  (1.85-0.77j)\n",
+            "5 :  (1.85-0.77j)\n",
+            "6 :  (0.71-0.3j)\n",
+            "7 :  (10.37-4.3j)\n",
             "\n",
             "\n",
             "stage 2\n",
-            "0 :  (3.06-7.39j)\n",
-            "1 :  -5.66j\n",
-            "2 :  (6.12+14.78j)\n",
-            "3 :  (-8-13.66j)\n",
-            "4 :  (2.16-5.23j)\n",
-            "5 :  -0j\n",
-            "6 :  (-36.58-6.49j)\n",
-            "7 :  (37.66+5.66j)\n"
+            "0 :  (-3.7+1.53j)\n",
+            "1 :  (-5.66+0j)\n",
+            "2 :  (-3.7+1.53j)\n",
+            "3 :  (4-4j)\n",
+            "4 :  (3.7-1.53j)\n",
+            "5 :  0j\n",
+            "6 :  (11.09-4.59j)\n",
+            "7 :  (-9.66+4j)\n"
           ]
         }
       ]
@@ -1197,9 +1188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LFAhIR0slVB",
-        "outputId": "ce8d69e1-7a05-4076-be7e-910d5fb0d534"
+        "outputId": "2205bb54-24a2-41dd-fb80-14c85703ae32"
       },
-      "execution_count": 290,
+      "execution_count": 313,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,16 +1246,24 @@
         "print('stage 0 (original sg)')\n",
         "\n",
         "for n in range(8):\n",
-        "  print(n, ': ', np.round(orig_sg[n], 2))"
+        "  print(n, ': ', np.round(orig_sg[n], 2))\n",
+        "\n",
+        "print(\"Конечный результат:\")\n",
+        "for n in range(8):\n",
+        "  print(n, ': ', np.round(orig_sg[n]/8, 2))\n",
+        "print(\"Длина вектора:\")\n",
+        "\n",
+        "for n in range(8):\n",
+        "  print(n, ': ', np.round(np.abs(orig_sg[n]/8), 2))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8DS75K1vsmIa",
-        "outputId": "3774dc01-5b42-4347-8d19-148735a4300b"
+        "outputId": "b8284202-cbf6-4611-91af-ae4b460693ca"
       },
-      "execution_count": 291,
+      "execution_count": 314,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,7 +1286,25 @@
             "4 :  (-22.17+9.18j)\n",
             "5 :  (-5.66+13.66j)\n",
             "6 :  (3.06+7.39j)\n",
-            "7 :  0j\n"
+            "7 :  0j\n",
+            "Конечный результат:\n",
+            "0 :  (0.92-0.38j)\n",
+            "1 :  (0.29-0.71j)\n",
+            "2 :  (-0.38-0.92j)\n",
+            "3 :  (-2.41-1j)\n",
+            "4 :  (-2.77+1.15j)\n",
+            "5 :  (-0.71+1.71j)\n",
+            "6 :  (0.38+0.92j)\n",
+            "7 :  0j\n",
+            "Длина вектора:\n",
+            "0 :  1.0\n",
+            "1 :  0.77\n",
+            "2 :  1.0\n",
+            "3 :  2.61\n",
+            "4 :  3.0\n",
+            "5 :  1.85\n",
+            "6 :  1.0\n",
+            "7 :  0.0\n"
           ]
         }
       ]
@@ -1428,7 +1445,7 @@
       "metadata": {
         "id": "x7Yr7FXTso9b"
       },
-      "execution_count": 292,
+      "execution_count": 315,
       "outputs": []
     }
   ]
